add virus serology deletion paths
